# philologist-lsp

./: .gitignore  DESIGN.md  README.md  sample.txt
.github/workflows/: ci.yml  release.yml
extension/: .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
extension/src/: commands.ts  decorations.ts  extension.ts  orality.ts  server-bootstrap.ts
server/: pyproject.toml
server/src/philologist_lsp/: __main__.py  colors.py  detect.py  glyphs.py  server.py  spacy_pool.py
server/src/philologist_lsp/analyzers/: definitions.py  morph.py  orality.py  orality_taxonomy.py
server/src/philologist_lsp/render/: decorations.py  hover.py  positions.py  semantic_tokens.py
server/src/philologist_lsp/verb_regularity/: __init__.py  de.json
server/tests/: test_smoke.py
