[project]
name = "philologist-lsp"
version = "0.0.1"
description = "Language Server that surfaces morphology and orality of natural-language text"
readme = "../README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zack Maril", email = "zack@zacharymaril.com" }]

dependencies = [
    "pygls>=1.3.0",
    "lsprotocol>=2023.0.1",
    "platformdirs>=4.0.0",
]

[project.optional-dependencies]
# Optional extras shipped with the wheel — the marketplace bootstrap
# installs `philologist-lsp[nlp,llm]` so end users get the ML stack
# transitively. (Mirrored in [dependency-groups] below for local dev.)
nlp = [
    "spacy>=3.7.0",
    "lingua-language-detector>=2.0.0",
    # Real pip — spacy.cli.download shells out to `python -m pip install`,
    # and we don't want it to hit uv's pip shim (which scans $PATH for Python
    # interpreters and chokes on broken installs like /usr/local/bin/python3).
    "pip>=24.0",
]
llm = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "accelerate>=0.33.0",
]

[project.scripts]
philologist-lsp = "philologist_lsp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/philologist_lsp"]

[dependency-groups]
# These mirror [project.optional-dependencies] for local dev. Listing them
# as dependency-groups + default-groups means a plain `uv sync` installs
# the ML stack — uv 0.5.x doesn't yet honor a `[tool.uv] default-extras`
# field, but `default-groups` works in every supported version.
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
nlp = [
    "spacy>=3.7.0",
    "lingua-language-detector>=2.0.0",
    "pip>=24.0",
]
llm = [
    "torch>=2.2.0",
    "transformers>=4.40.0",
    "huggingface-hub>=0.23.0",
    "accelerate>=0.33.0",
]

[tool.uv]
# Plain `uv sync` gives a fully usable dev environment. CI opts out via
# `uv sync --no-default-groups --group dev` to test that lazy imports work
# with only the base deps installed.
default-groups = ["dev", "nlp", "llm"]
